organize js and added admin panel

--- a/alpha_web_app/views/footer.ejs
+++ b/alpha_web_app/views/footer.ejs
@@ -1,8 +1,23 @@
-<script type="text/javascript" src="js/jquery-3.6.3.js"></script>
+<footer class="py-4 bg-light mt-auto">
+    <div class="container-fluid px-4">
+        <div class="d-flex align-items-center justify-content-between small">
+            <div class="text-muted">Copyright &copy; Your Website 2022</div>
+            <div>
+                <a href="#">Privacy Policy</a>
+                &middot;
+                <a href="#">Terms &amp; Conditions</a>
+            </div>
+        </div>
+    </div>
+</footer>
+
+<script type="text/javascript" src="js/bootstrape/jquery-3.6.3.js"></script>
 <!-- ✅ load jquery UI ✅ -->
-<script type="text/javascript" src="js/jquery-ui.js"></script>
-<script type="text/javascript" src="js/popper.min.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/bootstrape/jquery-ui.js"></script>
+<script type="text/javascript" src="js/bootstrape/popper.min.js"></script>
+<script type="text/javascript" src="js/bootstrape/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/bootstrape/bootstrap.bundle.min.js"></script>
+<script type="text/javascript" src="js/admin_panel/admin.js"></script>
 
 
 <script type="text/javascript">
