--- a/alpha_web_app/views/footer.ejs
+++ b/alpha_web_app/views/footer.ejs
@@ -18,13 +18,15 @@
 <script type="text/javascript" src="js/bootstrape/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/bootstrape/bootstrap.bundle.min.js"></script>
 <script type="text/javascript" src="js/admin_panel/admin.js"></script>
+<!-- For expense view js -->
+<script src="js/custom/expense_from.js"></script>
 
-
-<script type="text/javascript">
+<!-- <script type="text/javascript">
     $(function () {
-        $('#datepicker').datepicker();
+        console.log("HIT")
+       
     });
-</script>
+</script> -->
 </body>
 
 </body>
