Added datatables, select2, added bank functions

--- a/alpha_web_app/views/settings/BankSettings.ejs
+++ b/alpha_web_app/views/settings/BankSettings.ejs
@@ -1,8 +1,11 @@
 <%- include("../html_boilerplate.ejs"); %>
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <link rel="stylesheet" href="../css/jquery-ui.css">
-    <link rel="stylesheet" href="../css/admin_panel/admin.css">
-    <link rel="stylesheet" href="../css/custom/bank_settings.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="../css/jquery-ui.css"/>
+    <link rel="stylesheet" href="../css/admin_panel/admin.css"/>
+    <link rel="stylesheet" href="../css/custom/bank_settings.css"/>
+    <link rel="stylesheet" href="../css/jquery_datatables/jquery.dataTables.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" />
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2-bootstrap-css/1.4.6/select2-bootstrap.css" integrity="sha512-7/BfnxW2AdsFxJpEdHdLPL7YofVQbCL4IVI4vsf9Th3k6/1pu4+bmvQWQljJwZENDsWePEP8gBkDKTsRzc5uVQ==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <%- include("../header.ejs"); %>
 
         <div class="container" style="padding-top: 10px;">
@@ -20,7 +23,7 @@
             </div>
 
             <div class="dynamic_bank_style" id="dynamic_bank_content">
-        
+                
             </div>
         </div>
 
@@ -29,12 +32,12 @@
 
         </main>
         <script type="text/javascript" src="../js/bootstrape/jquery-3.6.3.js"></script>
-        <!-- ✅ load jquery UI ✅ -->
+         <!-- ✅ load jquery UI ✅  -->
         <script type="text/javascript" src="../js/bootstrape/jquery-ui.js"></script>
-        <script type="text/javascript" src="../js/bootstrape/popper.min.js"></script>
-        <script type="text/javascript" src="../js/bootstrape/bootstrap.min.js"></script>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
         <script type="text/javascript" src="../js/bootstrape/bootstrap.bundle.min.js"></script>
         <script type="text/javascript" src="../js/admin_panel/admin.js"></script>
+        <script type="text/javascript" src="../js/jquery_datatables/jquery.dataTables.min.js"></script>
         <!-- Custom Script -->
         <script type="text/javascript" src="../js/custom/bank_settings.js"></script>
         <%- include("../footer.ejs"); %>
