--- a/alpha_web_app/views/settings/bank-settings.ejs
+++ b/alpha_web_app/views/settings/bank-settings.ejs
@@ -2,10 +2,10 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css"/>
     <link rel="stylesheet" href="../css/jquery-ui.css"/>
     <link rel="stylesheet" href="../css/admin_panel/admin.css"/>
-    <link rel="stylesheet" href="../css/custom/bank_settings.css"/>
+    <link rel="stylesheet" href="../css/custom/banksettings.css"/>
     <link rel="stylesheet" href="../css/jquery_datatables/jquery.dataTables.min.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" />
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2-bootstrap-css/1.4.6/select2-bootstrap.css" integrity="sha512-7/BfnxW2AdsFxJpEdHdLPL7YofVQbCL4IVI4vsf9Th3k6/1pu4+bmvQWQljJwZENDsWePEP8gBkDKTsRzc5uVQ==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css"/>    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2-bootstrap-css/1.4.6/select2-bootstrap.css" integrity="sha512-7/BfnxW2AdsFxJpEdHdLPL7YofVQbCL4IVI4vsf9Th3k6/1pu4+bmvQWQljJwZENDsWePEP8gBkDKTsRzc5uVQ==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <%- include("../header.ejs"); %>
 
         <div class="container" style="padding-top: 10px;">
@@ -36,8 +36,9 @@
         <script type="text/javascript" src="../js/bootstrape/jquery-ui.js"></script>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
         <script type="text/javascript" src="../js/bootstrape/bootstrap.bundle.min.js"></script>
+        <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
         <script type="text/javascript" src="../js/admin_panel/admin.js"></script>
         <script type="text/javascript" src="../js/jquery_datatables/jquery.dataTables.min.js"></script>
         <!-- Custom Script -->
-        <script type="text/javascript" src="../js/custom/bank_settings.js"></script>
+        <script type="text/javascript" src="../js/custom/bank-settings.js"></script>
         <%- include("../footer.ejs"); %>
