--- a/alpha_web_app/views/expense-from.ejs
+++ b/alpha_web_app/views/expense-from.ejs
@@ -9,7 +9,7 @@
         <div class="container-fluid px-4">
             <div class="container">
                 <div>
-                    <h1>Expense From</h1>
+                    <h1>Expense Form</h1>
                 </div>
                 <form id="expense_form">
                     <div class="mb-3">
