--- a/alpha_web_app/views/header.ejs
+++ b/alpha_web_app/views/header.ejs
@@ -38,7 +38,7 @@
                         <div class="sb-sidenav-menu-heading">Core</div>
                         <a class="nav-link" href="/">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                            Expense From
+                            Expense Form
                         </a>
                         <div class="sb-sidenav-menu-heading">Interface</div>
                         <a id="settings_id" class="nav-link collapsed" href="#" data-bs-toggle="collapse"
