--- a/alpha_web_app/views/expense-form.ejs
+++ b/alpha_web_app/views/expense-form.ejs
@@ -7,43 +7,21 @@
 
     <%- include("header.ejs"); %>
         <div class="container" style="padding-top: 10px;">
-            <!-- <div>
-                    <h1>Expense Form</h1>
-                </div>
-                <form id="expense_form">
-                    <div class="mb-3">
-                        <label for="debited_from" class="form-label">Debited From</label>
-                        <select id="debited_from" class="select2 form-control" required>
-
-                        </select>
-                    </div>
-                    <div class="mb-3">
-                        <label for="amount" class="form-label">Amount</label>
-                        <input type="number" class="form-control" id="amount" required>
-                    </div>
-
-                    <div class='mb-3'>
-                        <label for="datepicker" class="form-label">Date</label>
-                        <input type="text" id="expense_date" class="form-control" id="datepicker" required>
-                    </div>
-
-                    <div class="mb-3">
-                        <label for="notes" class="form-label">Notes</label>
-                        <input type="text" class="form-control" id="notes" required>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Submit Data</button>
-                </form> -->
             <div class="row">
                 <div class="col-xl-6">
                     <div class="card mb-4">
-                        <div id="add_bank_details" class="card-body center">Add Bank Details</div>
+                        <div id="add-expense" class="card-body center">Add Expense</div>
                     </div>
                 </div>
                 <div class="col-xl-6">
                     <div class="card mb-4">
-                        <div id="edit_bank_details" class="card-body center">Edit Bank Details</div>
+                        <div id="view-expense" class="card-body center">View Expense</div>
                     </div>
                 </div>
+            </div>
+
+            <div class="dynamic_bank_style" id="dynamic_bank_content">
+
             </div>
         </div>
         </main>
