optimised project structure and nomenclature

--- a/alpha_web_app/views/common/header.ejs
+++ b/alpha_web_app/views/common/header.ejs
@@ -35,10 +35,14 @@
             <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
                 <div class="sb-sidenav-menu">
                     <div class="nav">
-                        <div class="sb-sidenav-menu-heading">Core</div>
-                        <a class="nav-link" href="/">
+                        <div class="sb-sidenav-menu-heading">Transactions</div>
+                        <a id="debit-id" class="nav-link" href="/">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                            Expense Form
+                            Expense
+                        </a>
+                        <a id="credit_id" class="nav-link" href="/transaction/credit">
+                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            Credit
                         </a>
                         <div class="sb-sidenav-menu-heading">Interface</div>
                         <a id="settings_id" class="nav-link collapsed" href="#" data-bs-toggle="collapse"
