added credit routes,services and view

--- a/alpha_web_app/views/transaction/credit-form.ejs
+++ b/alpha_web_app/views/transaction/credit-form.ejs
@@ -9,18 +9,19 @@
 
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2-bootstrap-css/1.4.6/select2-bootstrap.css" integrity="sha512-7/BfnxW2AdsFxJpEdHdLPL7YofVQbCL4IVI4vsf9Th3k6/1pu4+bmvQWQljJwZENDsWePEP8gBkDKTsRzc5uVQ==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <link rel="stylesheet" href="../css/admin_panel/admin.css" />
+    <link rel="stylesheet" href="../css/custom/credit.css" />
     <%- include("../common/header.ejs"); %>
 
         <div class="container" style="padding-top: 10px;">
             <div class="row">
                 <div class="col-xl-6">
                     <div class="card mb-4">
-                        <div id="add_credit_details" class="card-body center">Add Credit Details</div>
+                        <div id="add-credit-details" class="card-body center">Add Credit Details</div>
                     </div>
                 </div>
                 <div class="col-xl-6">
                     <div class="card mb-4">
-                        <div id="edit_bank_details" class="card-body center">View Credit Details</div>
+                        <div id="view-credit-details" class="card-body center">View Credit Details</div>
                     </div>
                 </div>
             </div>
