--- a/alpha_web_app/views/transaction/expense-form.ejs
+++ b/alpha_web_app/views/transaction/expense-form.ejs
@@ -43,6 +43,7 @@
             src="https://cdn.datatables.net/rowreorder/1.3.3/js/dataTables.rowReorder.min.js"></script>
         <script type="text/javascript"
             src="https://cdn.datatables.net/responsive/2.4.1/js/dataTables.responsive.min.js"></script>
+        <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
         <script type="text/javascript" src="../js/admin_panel/admin.js"></script>
         <!-- For expense view js -->
         <script src="../js/custom/expense-form.js"></script>
