--- a/alpha_web_app/views/common/footer.ejs
+++ b/alpha_web_app/views/common/footer.ejs
@@ -1,7 +1,7 @@
 <footer class="py-4 bg-light mt-auto">
     <div class="container-fluid px-4">
         <div class="d-flex align-items-center justify-content-between small">
-            <div class="text-muted">Copyright &copy; Your Website 2022</div>
+            <div class="text-muted">Copyright &copy; Behisebe <span id="year"></span> </div>
             <div>
                 <a href="#">Privacy Policy</a>
                 &middot;
@@ -10,6 +10,10 @@
         </div>
     </div>
 </footer>
+
+<script>
+    document.getElementById("year").innerHTML = new Date().getFullYear();
+</script>
 
 
 </body>
