Fixed dependency issue and added more func

--- a/alpha_web_app/views/common/header.ejs
+++ b/alpha_web_app/views/common/header.ejs
@@ -1,4 +1,3 @@
-
 <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
 
 </head>
@@ -43,6 +42,14 @@
                         <a id="credit_id" class="nav-link" href="/transaction/credit">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             Credit
+                        </a>
+                        <a id="pay-your-debt-id" class="nav-link" href="/transaction/pay-your-debts">
+                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            Pay Your Debt
+                        </a>
+                        <a id="collect-your-debt-id" class="nav-link" href="/transaction/collect-your-debts">
+                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            Collect Your Debt
                         </a>
                         <div class="sb-sidenav-menu-heading">Interface</div>
                         <a id="settings_id" class="nav-link collapsed" href="#" data-bs-toggle="collapse"
