working on pay your debts

--- a/alpha_web_app/views/transaction/pay-your-debt.ejs
+++ b/alpha_web_app/views/transaction/pay-your-debt.ejs
@@ -12,9 +12,10 @@
     <%- include("../common/header.ejs"); %>
 
         <div class="container" style="padding-top: 10px;">
-            <table id="pay-your-debt-id" class="display nowrap" style="width:100%">
+            <table id="pay-your-debt-table" class="display nowrap" style="width:100%">
                 <thead>
                     <tr>
+                        
                     </tr>
                 </thead>
                 <tbody>
