Pay your debt inprogress

--- a/alpha_web_app/views/transaction/pay-your-debt.ejs
+++ b/alpha_web_app/views/transaction/pay-your-debt.ejs
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="../css/admin_panel/admin.css" />
     <%- include("../common/header.ejs"); %>
 
-        <div class="container" style="padding-top: 10px;">
-            <table id="pay-your-debt-table" class="display nowrap" style="width:100%">
+        <div class="container table-responsive" style="padding-top: 10px;">
+            <table id="pay-your-debt-table" class="table display nowrap" style="width:100%">
                 <thead>
                     <tr>
                         
