--- a/alpha_web_app/views/transaction/pay-your-debt.ejs
+++ b/alpha_web_app/views/transaction/pay-your-debt.ejs
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="https://cdn.datatables.net/rowreorder/1.3.3/css/rowReorder.dataTables.min.css" />
     <link rel="stylesheet" href="https://cdn.datatables.net/responsive/2.4.1/css/responsive.dataTables.min.css" />
 
+
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2-bootstrap-css/1.4.6/select2-bootstrap.css" integrity="sha512-7/BfnxW2AdsFxJpEdHdLPL7YofVQbCL4IVI4vsf9Th3k6/1pu4+bmvQWQljJwZENDsWePEP8gBkDKTsRzc5uVQ==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <link rel="stylesheet" href="../css/admin_panel/admin.css" />
+    <link rel="stylesheet" href="../css/custom/payyourdebt.css">
     <%- include("../common/header.ejs"); %>
 
         <!-- Modal -->
@@ -23,11 +25,11 @@
                         </button>
                     </div>
                     <div id="paymentModalBody" class="modal-body">
-                        
+
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary btn-cls" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Update</button>
+                        <button id="processBorrowPayment" type="button" class="btn btn-primary">Update</button>
                     </div>
                 </div>
             </div>
