ByCash imp in progress

--- a/alpha_web_app/views/common/footer.ejs
+++ b/alpha_web_app/views/common/footer.ejs
@@ -10,7 +10,8 @@
         </div>
     </div>
 </footer>
-
+</div>
+</div>
 <script>
     document.getElementById("year").innerHTML = new Date().getFullYear();
 </script>
