imp backend logic for get expense

--- a/alpha_web_app/public/css/custom/expense_form.css
+++ b/alpha_web_app/public/css/custom/expense_form.css
@@ -4,6 +4,10 @@
   transition: color 0.5s ease;
   transition: background 0.5s ease;
 }
+.center2 {
+  text-align: center;
+  cursor: pointer;
+}
 
 .center:hover {
   background-color: #90ee90;
