--- a/alpha_web_app/views/common/header.ejs
+++ b/alpha_web_app/views/common/header.ejs
@@ -35,10 +35,23 @@
                 <div class="sb-sidenav-menu">
                     <div class="nav">
                         <div class="sb-sidenav-menu-heading">Transactions</div>
-                        <a id="debit-id" class="nav-link" href="/">
+                        <!-- <a id="debit-id" class="nav-link" href="/">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             Expense
+                        </a> -->
+                        <a id="expenseId" class="nav-link collapsed" href="#" data-bs-toggle="collapse"
+                            data-bs-target="#expenseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
+                            <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
+                            Expense
+                            <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                         </a>
+                        <div class="collapse" id="expenseLayouts" aria-labelledby="headingOne"
+                            data-bs-parent="#sidenavAccordion">
+                            <nav class="sb-sidenav-menu-nested nav">
+                                <a id="" class="nav-link" href="/transaction/expense">Add Expense</a>
+                                <!-- <a class="nav-link" href="layout-sidenav-light.html">Light Sidenav</a> -->
+                            </nav>
+                        </div>
                         <a id="credit_id" class="nav-link" href="/transaction/credit">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             Credit
@@ -58,14 +71,16 @@
                             Settings
                             <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                         </a>
+                        <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne"
+                            data-bs-parent="#sidenavAccordion">
+                            <nav class="sb-sidenav-menu-nested nav">
+                                <a id="bank_settings_id" class="nav-link" href="/settings/bank_settings">Bank
+                                    Setting</a>
+                                <!-- <a class="nav-link" href="layout-sidenav-light.html">Light Sidenav</a> -->
+                            </nav>
+                        </div>
                     </div>
-                    <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne"
-                        data-bs-parent="#sidenavAccordion">
-                        <nav class="sb-sidenav-menu-nested nav">
-                            <a id="bank_settings_id" class="nav-link" href="/settings/bank_settings">Bank Setting</a>
-                            <!-- <a class="nav-link" href="layout-sidenav-light.html">Light Sidenav</a> -->
-                        </nav>
-                    </div>
+
                 </div>
                 <div class="sb-sidenav-footer">
                     <div class="small">Logged in as:</div>
