pay your debt done and collect your debt in prog

--- a/alpha_web_app/views/transaction/collect-your-debt.ejs
+++ b/alpha_web_app/views/transaction/collect-your-debt.ejs
@@ -11,7 +11,17 @@
     <link rel="stylesheet" href="../css/admin_panel/admin.css" />
     <%- include("../common/header.ejs"); %>
 
-        <div class="container" style="padding-top: 10px;">
+        <div class="container table-responsive" style="padding-top: 10px;">
+            <table id="collect-your-debt-table" class="table display nowrap" style="width:100%">
+                <thead>
+                    <tr>
+
+                    </tr>
+                </thead>
+                <tbody>
+
+                </tbody>
+            </table>
         </div>
         </main>
 
@@ -30,5 +40,6 @@
             src="https://cdn.datatables.net/responsive/2.4.1/js/dataTables.responsive.min.js"></script>
         <!-- Custom Script -->
         <script type="text/javascript" src="../js/admin_panel/admin.js"></script>
+        <script type="text/javascript" src="../js/custom/collect-your-debt.js"></script>
 
         <%- include("../common/footer.ejs"); %>
