--- a/alpha_web_app/views/transaction/collect-your-debt.ejs
+++ b/alpha_web_app/views/transaction/collect-your-debt.ejs
@@ -10,7 +10,27 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2-bootstrap-css/1.4.6/select2-bootstrap.css" integrity="sha512-7/BfnxW2AdsFxJpEdHdLPL7YofVQbCL4IVI4vsf9Th3k6/1pu4+bmvQWQljJwZENDsWePEP8gBkDKTsRzc5uVQ==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <link rel="stylesheet" href="../css/admin_panel/admin.css" />
     <%- include("../common/header.ejs"); %>
+        <!-- Modal -->
+        <div class="modal fade" id="updatePaymentModal" tabindex="-1" role="dialog"
+            aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                        <button type="button" class="close btn-cls" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div id="paymentModalBody" class="modal-body">
 
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary btn-cls" data-dismiss="modal">Close</button>
+                        <button id="processBorrowPayment" type="button" class="btn btn-primary">Update</button>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="container table-responsive" style="padding-top: 10px;">
             <table id="collect-your-debt-table" class="table display nowrap" style="width:100%">
                 <thead>
