Fixed moble view

--- a/alpha_web_app/views/transaction/credit/add-credit.ejs
+++ b/alpha_web_app/views/transaction/credit/add-credit.ejs
@@ -35,7 +35,7 @@
                 </div>
                 <div class="mb-3" id="credit-from-div">
                     <label for="credited-to" class="form-label">Credit To</label>
-                    <select id="credited-to" class="select2 form-control" required>
+                    <select id="credited-to" class="form-control" required>
 
                     </select>
                 </div>
@@ -51,7 +51,7 @@
 
                 <div class="mb-3" id="cerdit-reason-div">
                     <label for="credit-reason" class="form-label">Credit Cause</label>
-                    <select id="credit-reason" class="select2 form-control" required>
+                    <select id="credit-reason" class="form-control" required>
 
                     </select>
                 </div>
