--- a/alpha_web_app/views/transaction/expense/add-expense.ejs
+++ b/alpha_web_app/views/transaction/expense/add-expense.ejs
@@ -36,7 +36,7 @@
                 </div>
                 <div id="debited-from-div" class="mb-3">
                     <label for="debited-from" class="form-label">Debited From</label>
-                    <select id="debited-from" class="select2 form-control" required>
+                    <select id="debited-from" class="form-control" required>
 
                     </select>
                 </div>
@@ -52,7 +52,7 @@
 
                 <div class="mb-3">
                     <label for="expense-reason" class="form-label">Expense Cause</label>
-                    <select id="expense-reason" class="select2 form-control" required>
+                    <select id="expense-reason" class="form-control" required>
 
                     </select>
                 </div>
