fixed mobile view and collect debt imp in-progress

--- a/alpha_web_app/views/transaction/collect-your-debt.ejs
+++ b/alpha_web_app/views/transaction/collect-your-debt.ejs
@@ -9,6 +9,7 @@
 
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2-bootstrap-css/1.4.6/select2-bootstrap.css" integrity="sha512-7/BfnxW2AdsFxJpEdHdLPL7YofVQbCL4IVI4vsf9Th3k6/1pu4+bmvQWQljJwZENDsWePEP8gBkDKTsRzc5uVQ==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
     <link rel="stylesheet" href="../css/admin_panel/admin.css" />
+    <link rel="stylesheet" href="../css/custom/payyourdebt.css">
     <%- include("../common/header.ejs"); %>
         <!-- Modal -->
         <div class="modal fade" id="updatePaymentModal" tabindex="-1" role="dialog"
@@ -26,7 +27,7 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary btn-cls" data-dismiss="modal">Close</button>
-                        <button id="processBorrowPayment" type="button" class="btn btn-primary">Update</button>
+                        <button id="processOwePayment" type="button" class="btn btn-primary">Update</button>
                     </div>
                 </div>
             </div>
